<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="tv_welcome">My Nanodegree Apps!</string>

    <!-- Button Text -->
    <string name="b_popular_movies">POPULAR MOVIES</string>
    <string name="b_stock_hawk">STOCK HAWK</string>
    <string name="b_built_big">BUILD IT BIGGER</string>
    <string name="b_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="b_ubiquitous">GO UBIQUITOUS</string>
    <string name="b_capstone">CAPSTONE</string>

    <!-- Toast -->
    <string name="t_popular_movies">This button will launch Popular Movies.</string>
    <string name="t_stock_hawk">This button will launch Stock Hawk.</string>
    <string name="t_built_big">This button will launch Build it Big.</string>
    <string name="t_app_material">This button will launch Make Your App material.</string>
    <string name="t_ubiquitous">This button will launch Go Ubiquitous.</string>
    <string name="t_capstone">This button will launch Capstone.</string>


</resources>
